# mcp_finansai

./: .gitignore  README.md  compose.yml  pyproject.toml  test.py  test_local.py
news_mcp/: Dockerfile  app.py  pyproject.toml  supervisord.conf  utils.py
social_mcp/: Dockerfile  app.py  pyproject.toml  utils.py
src/: app.py  utils.py
