[project]
name = "news-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "langchain>=0.3.25",
    "langchain-core>=0.3.60",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.1.6",
    "langgraph>=0.4.5",
]
