[project]
name = "social-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "langchain>=0.3.25",
    "langchain-core>=0.3.60",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.5",
    "praw>=7.8.1",
]
